complete pie chart

--- a/src/App/styles.scss
+++ b/src/App/styles.scss
@@ -10,4 +10,5 @@ ul, li {
 body {
     background-color: #5982ff;
     font-family: HelveticaNeue,Helvetica,Arial,sans-serif;
+    padding-bottom: 50px;
 }
