--- a/src/component/EnglishTable2/styles.scss
+++ b/src/component/EnglishTable2/styles.scss
@@ -2,7 +2,7 @@
 	margin: 20px 16px 0;
     border-radius: 8px;
     background-color: #fff;
-    padding: 16px 10px;
+    padding: 16px 8px;
 
 	.head {
 		display: flex;
@@ -12,11 +12,10 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
-			width: 23%;
 			background: #FF739C;
 			border-radius: 6px;
 			color: #fff;
-			font-size: 14px;
+			font-size: 12px;
 			font-family: PingFangSC-Regular;
 			padding: 12px 0;
 
@@ -28,10 +27,29 @@
 	}
 
 	.body{
-		margin-top: 6px;
+		.body-item {
+			display: flex;
+			align-items: top;
+			margin-top: 14px;
+			padding-top: 10px;
+			background: #F3F4F5;
+			border-radius: 14px;
 
-		li {
-			
-		}		
+			span {
+				text-align: center;
+				color: #666;
+				font-size: 14px;
+				font-family: PingFangSC-Regular;
+				padding: 0 3px;
+			}
+		}
+
+		.knowledge-point {
+			li {
+				display: flex;
+				align-items: center;
+				margin-bottom: 16px;
+			}
+		}	
 	}
 }
