--- a/src/component/LevelAnalysis/styles.scss
+++ b/src/component/LevelAnalysis/styles.scss
@@ -39,11 +39,11 @@
 }
 
 .bg-green {
-    background-color: #5EE168;
+    background-color: #5A83FF;
 }
 
 .border-green {
-    border: 1px solid rgba(#5EE168, 0.4);
+    border: 1px solid rgba(#5A83FF, 0.3);
 }
 
 .bg-pink {
@@ -51,7 +51,7 @@
 }
 
 .border-pink {
-    border: 1px solid rgba(#FF739C, 0.4);
+    border: 1px solid rgba(#FF739C, 0.3);
 }
 
 .bar {
