--- a/src/App/styles.scss
+++ b/src/App/styles.scss
@@ -8,7 +8,7 @@ ul, li {
 }
 
 body {
-    background-color: #5982ff;
+    background-color: #F5665E;
     font-family: HelveticaNeue,Helvetica,Arial,sans-serif;
     padding-bottom: 50px;
 }
