--- a/src/App/styles.scss
+++ b/src/App/styles.scss
@@ -11,4 +11,6 @@ body {
     background-color: #F5665E;
     font-family: HelveticaNeue,Helvetica,Arial,sans-serif;
     padding-bottom: 50px;
+    max-width: 375px;
+    margin: auto;
 }
