--- a/src/component/QuestionPieChart/styles.scss
+++ b/src/component/QuestionPieChart/styles.scss
@@ -7,14 +7,13 @@
 
 .title {
     font-size: 24px;
-    padding-left: 14px;
-    padding-top: 8px;
+    padding-top: 12px;
     line-height: 40px;
     color: #333;
     font-weight: bold;
     letter-spacing: 1px;
     font-family: PingFangSC-Medium;
-    margin-bottom: 4px;
+    text-align: center;
 }
 
 .info {
