--- a/src/component/QuestionPieChart/styles.scss
+++ b/src/component/QuestionPieChart/styles.scss
@@ -8,12 +8,13 @@
 .title {
     font-size: 24px;
     padding-top: 12px;
+    padding-left: 14px;
     line-height: 40px;
     color: #333;
     font-weight: bold;
     letter-spacing: 1px;
     font-family: PingFangSC-Medium;
-    text-align: center;
+    margin-bottom: 4px;
 }
 
 .info {
