--- a/src/component/QuestionTable/styles.scss
+++ b/src/component/QuestionTable/styles.scss
@@ -30,7 +30,7 @@
 			height: 70px;
 			background-color: #fff;
 			border-radius: 50%;
-			border: 10px solid #F3F4F5;
+			border: 10px solid #EEE;
 			position: relative;
 
 			.ring {
