--- a/src/component/QRcode/styles.scss
+++ b/src/component/QRcode/styles.scss
@@ -4,19 +4,20 @@
     background-color: #fff;
 
     .title {
-	    font-size: 24px;
+	    font-size: 28px;
 		padding: 8px 14px;
-	    line-height: 40px;
-	    color: #333;
+	    line-height: 46px;
+	    color: #F5665E;
 	    font-weight: bold;
 	    letter-spacing: 1px;
 	    font-family: PingFangSC-Medium;
+	    text-align: center;
 	}
 
 	.description {
 		font-size: 16px;
 		padding: 0 14px;
-	    line-height: 20px;
+	    line-height: 24px;
 	    color: #666;
 	    font-family: PingFangSC-Medium;
 	    text-align: justify;
