--- a/src/component/QRcode/styles.scss
+++ b/src/component/QRcode/styles.scss
@@ -20,7 +20,7 @@
 	    line-height: 24px;
 	    color: #666;
 	    font-family: PingFangSC-Medium;
-	    text-align: justify;
+	    text-align: left;
 	}
 
 	.qr-code {
